<resources>
    <string name="app_name">Life_Simulator2</string>
    <string name="action_settings">Settings</string>

    <string name="contextMenuCardDetails_show">使用者詳情</string>
    <string name="contextMenuCardDetails_setting">設定</string>

    <string name="level">Lv </string>
    <string name="exp">經驗值：</string>

    <string name="notebook_search_spinner_hint">選擇快取分類 : </string>
    <string name="add_new_memo">新增筆記</string>
    <string name="note_item_title">標題</string>
    <string name="note_item_entertitle">輸入標題</string>
    <string name="note_item_entercontent">內容</string>
    <string name="note_item_content">輸入內容</string>
    <string name="note_item_entercategory">輸入分類</string>
    <string name="note_item_category">分類</string>
    <string name="memo_edit_btn">編輯筆記</string>
    <string name="memo_delete_btn">刪除筆記</string>
</resources>
