<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_memo_item_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.waterball.life_simulator2.Memo.Memo_item_page"
    android:stretchColumns="1"
    android:background="#d8efed">
    <TableRow>
        <TextView
            android:text="@string/note_item_title"
            style="@style/waterball_preference_notebookItem"
            android:background="@color/color_gray_note"
            android:padding="6sp"
            android:layout_margin="2sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/title_text_NoteEdit"
            android:hint="@string/note_item_entertitle"
            style="@style/waterball_preference_notebookItem"
            android:background="@color/color_gray_note"
            android:padding="6sp"
            android:layout_margin="2sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/note_item_category"
            style="@style/waterball_preference_notebookItem"
            android:background="@color/color_gray_note"
            android:padding="6sp"
            android:layout_margin="2sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/category_text_NoteEdit"
            android:hint="@string/note_item_entercategory"
            style="@style/waterball_preference_notebookItem"
            android:background="@color/color_gray_note"
            android:padding="6sp"
            android:layout_margin="2sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:stretchColumns="*">
        <TableRow>
            <RelativeLayout
                android:background="@color/color_gray_note"
                android:layout_height="match_parent">
            <EditText
                style="@style/waterball_preference_notebookItem"
                android:id="@+id/content_text_NoteEdit"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:hint="@string/note_item_entercontent"
                android:gravity="top"
                android:padding="6sp"
                android:layout_margin="2sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <Button
                android:id="@+id/cancel_item_NoteITEM"
                android:text="@android:string/cancel"
                android:onClick="onSubmit"
                android:padding="6sp"
                android:layout_margin="2sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/ok_teim_NoteITEM"
                android:text="@android:string/ok"
                android:onClick="onSubmit"
                android:padding="6sp"
                android:layout_margin="2sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>
</TableLayout>
